Fixes search issues and visibility

--- a/app/assets/stylesheets/_navbar.scss
+++ b/app/assets/stylesheets/_navbar.scss
@@ -1,3 +1,7 @@
+.overflowing {
+  overflow: auto;
+}
+
 .navbar {
   background-color: $beaver-orange;
   flex-wrap: wrap;
